--- a/test/fixtures/transformed-out.css
+++ b/test/fixtures/transformed-out.css
@@ -1,4 +1,4 @@
-.e58192ef h1 {
+._e58192ef h1 {
   -webkit-transform: translate(50px, 50px);
       -ms-transform: translate(50px, 50px);
           transform: translate(50px, 50px);
