--- a/test/fixtures/plugins-expected.css
+++ b/test/fixtures/plugins-expected.css
@@ -1,4 +1,4 @@
-._08548a3e hello, ._08548a3e world {
+._75161010 .hello,._75161010 .world {
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0);
   }
